k8s/overlays/openshift/remove-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testlookup-ingress
  namespace: testlookup
$patch: delete
